// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`waypoint get other from distance and bearing 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      1.414172,
    ],
    "type": "Point",
  },
  "properties": Object {},
  "type": "Waypoint",
}
`;

exports[`waypoint is exported as GeoJSON Position, or Point & Feature 2`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      1.123457,
      1.123457,
      1235,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitude": Object {
      "precision": 9,
      "reference": undefined,
      "type": "Altitude",
      "unit": "m",
      "value": 1234.56789,
    },
    "name": "Echo",
    "notes": "Some note",
  },
  "type": "Feature",
}
`;

exports[`waypoint is exported as JSON object 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      1.123457,
      1.123457,
      1235,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitude": Object {
      "precision": 9,
      "reference": undefined,
      "type": "Altitude",
      "unit": "m",
      "value": 1234.56789,
    },
    "name": "Echo",
    "notes": "Some note",
  },
  "type": "Waypoint",
}
`;

exports[`waypoint is imported from GeoJSON Position, Point & Feature, or plain Waypoint object 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      0,
      1,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitude": Object {
      "precision": 1,
      "reference": undefined,
      "type": "Altitude",
      "unit": "m",
      "value": 1,
    },
    "name": "null Island",
  },
  "type": "Waypoint",
}
`;

exports[`waypoint is imported from GeoJSON Position, Point & Feature, or plain Waypoint object 2`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      0,
      1,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitude": Object {
      "precision": 1,
      "reference": undefined,
      "type": "Altitude",
      "unit": "m",
      "value": 1,
    },
  },
  "type": "Waypoint",
}
`;

exports[`waypoint is imported from GeoJSON Position, Point & Feature, or plain Waypoint object 3`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      0,
      0,
      1,
    ],
    "type": "Point",
  },
  "properties": Object {
    "altitude": Object {
      "precision": 1,
      "reference": undefined,
      "type": "Altitude",
      "unit": "m",
      "value": 1,
    },
    "name": "null Island",
  },
  "type": "Waypoint",
}
`;

exports[`waypoint is imported from GeoJSON Position, Point & Feature, or plain Waypoint object 4`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      1,
      1,
    ],
    "type": "Point",
  },
  "properties": Object {
    "name": "null Island",
  },
  "type": "Waypoint",
}
`;
